# oscw-zkvms-battleship

./: Cargo.toml  README.md
core/: Cargo.toml
core/src/: lib.rs
guests/: Cargo.toml
guests/battleship/: Cargo.toml
guests/battleship/src/: main.rs
guests/tests/: example_game.rs
host/: Cargo.toml
host/src/: main.rs
