[workspace]
resolver = "2"
members = ["core", "guests", "host"]

[workspace.dependencies]
battleship-core = { path = "core" }

risc0-build = { version = "1.2.5" }
risc0-zkvm = { version = "1.2", default-features = false }
serde = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
anyhow = "1.0"
rand = "0.9.0"

[profile.release]
debug = 1
lto = "thin"
