[package]
name = "battleship-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
rand = { version = "0.9.0", optional = true }
risc0-zkvm = { workspace = true, features = ["std"] }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = { version = "0.9.0" }

[features]
rand = ["dep:rand"]
