[package]
name = "battleship-core"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = "1.3"
rand = { workspace = true, optional = true }
risc0-zkvm = { workspace = true, features = ["std"] }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rand = { workspace = true }

[features]
rand = ["dep:rand"]
